style.css
/* ... */
.header h1 span {
    color: #b452f7;
}

.header h2 {
    color: #57727f;
    font-weight: normal;
}

.header h2 a {
    color: #2196F3;
    text-decoration-color: transparent;
    transition: text-decoration-color, .25s;
}

.header h2 a:hover {
    text-decoration-color: #2196F3;
}

.header .makerlog-embed {
    margin-top: 1em;
}

.main-content-list.fullwidth-feature-items {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 2rem;
    grid-row-gap: 2rem;
}

.main-content-list.fullwidth-feature-items > a {
    text-decoration: none;
}

.main-content-list.fullwidth-feature-items .item {
    box-sizing: border-box;
    display: block;
    min-height: calc(100vh - 60px - 4rem);
    padding: 3rem;
    line-height: 1.5em;
    display: flex;
    align-items: flex-end;
    background-size: cover;
    background-position: center center;
    color: white;
}

.main-content-list.fullwidth-feature-items .item:first-child {
    margin-top: 0;
}

.main-content-list.fullwidth-feature-items .item h2 {
    background: rgba(0,0,0,0.6);
    padding: 1rem;
    border-radius: 10px;
    box-shadow: inset 0 0 2rem rgba(0, 0, 0, 0.5);
}

@media screen and (max-width: 950px) {
    .main-content-list.fullwidth-feature-items {
        grid-template-columns: 1fr;
    }
    .main-content-list.fullwidth-feature-items .item {
        grid-column-start: 1 !important;
        grid-column-end: 1 !important;
    }
}

.quicklinks {
    list-style: none;
    margin: 2rem 0;
    padding: 0;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}

.quicklinks li {
    margin: 0.5em;
    min-width: max-content;
    background-size: cover;
    background-position: center center;
}

.quicklinks a {
    color: white;
    text-decoration: none;
    padding: 1em;
    line-height: 3em;
}

@media screen and (max-width: 1087px) {
    header img {
        display: none;
    }
    header h2 {
        left: 0;
    }
}

@media screen and (max-width: 997px) {
    header img {
        display: initial;
    }
    header h2 {
        display: none;
    }
}

@media screen and (max-width: 662px) {
    header img {
        display: none;
    }
    .header { /* No more need for 60px to align with logo in nav */
        padding: 0 2rem !important;
    }
    header h2 {
        display: none;
    }
    .contact-cards {
        grid-template-columns: 1fr 1fr;
    }
}

/* IF ADDING MORE LINKS TO THE NAV THEN CHANGE THE QUERY SIZES!!! */
/* MOBILE NAV */
@media screen and (max-width: 537px) {
    /* .logo h1 br {
        display: initial;
    }
    body.not-found .logo h1 {
        line-height: initial;
        margin-top: calc((100vh - 60px) / 2);
        height: calc(100vh - calc((100vh - 60px) / 2));
    } */
    
    /* Old style (hamburger) *
    header img {
        display: none;
    }
    header .logo h2 {
        display: initial;
        width: 100vw;
        text-align: center;
        left: 0;
        margin-left: 0;
    }
    header .hamburger {
        display: initial;
    }
    header nav {
        /* margin-top: calc(-100vh + 60px); SWAP WITH LINE BELOW IF WANT TO HAVE DROP-DOWN EFFECT*
        margin-top: 60px;
        transition: all,.5s;
        background-color: #b346ff;
        border-top: 2px solid white;
        width: 100vw;
        height: calc(100vh - 60px);
        text-align: center !important;
        line-height: 5em;
        overflow-y: scroll;
        font-size: 1.5em;
        background-color: #32424a;
        position: fixed;
        opacity: 0;
        pointer-events: none;
    }
    header nav ul {
        display: block !important;
        margin: 0 !important;
        padding: 0 !important;
        list-style: none !important;
        text-align: center !important;
        color: #cea9ff !important;
    }
    header nav li {
        padding: initial !important;
        display: list-item !important;
    }
    */
    header {
        top: unset;
        bottom: 0;
        box-shadow: 0 0 1rem rgba(0, 0, 0, 0.17) !important;
        background-position: center bottom;
    }
    header:before {
        clip: rect(calc(100vh - 60px),100vw,100vh,0) !important;
    }
    body {
        overflow: scroll;
        margin-top: 0 !important;
        margin-bottom: 60px;
    }
    header {
        overflow-x: scroll;
    }
    header nav li {
        height: 50%;
    }
    header nav li.nav-section-explainer {
        display: none;
    }
    header nav a i {
        margin-right: 0;
    }
    header nav a span {
        display: none;
    }
    header nav a span.short-name {
        display: block;
    }
    body.home .header {
        margin-top: 0;
    }
    .header {
        height: calc(80vh - 60px);
    }
    body.home .header {
        text-align: center;
    }
    /* MOBILE HEADER OLD CONT.
    body.nav-out {
        overflow: hidden;
    }
    body.nav-out header nav {
        opacity: 1;
        margin-top: 60px;
        pointer-events: auto;
    }
    */
    .content {
        margin: 0 !important;
        border-radius: 0 !important;
    }
    .back-to-top {
        margin-top: 0 !important;
    }
    .main-content-list.fullwidth-feature-items .item {
        min-height: unset !important;
        padding: 2rem !important;
    }
    .quicklinks li {
        width: 100%;
    }
}

@media screen and (max-width: 485px) {
    .contact-cards {
        grid-template-columns: 1fr;
    }
}

